Retrait image pour texte et ajout version EN

--- a/index-en.html
+++ b/index-en.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr"> <!-- Page française -->
+<html lang="default"> <!-- Page international -->
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence web design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<link rel="alternate" hreflang="en" href="https://magnus-fidelis.github.io/Projet-4/fr/" /> <!-- Permet à google d'identifier les URL qui doivent être servies à vos visiteurs en fonction
+	<link rel="alternate" hreflang="x-default" href="https://magnus-fidelis.github.io/Projet-4/en/" /> <!-- Permet à google d'identifier les URL qui doivent être servies à vos visiteurs en fonction
 	de leur langue et de leur situation géographique. -->
 
 	
@@ -50,7 +50,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html">Home Page</a>
 					</li>
 					<li>
 					</li>
@@ -87,7 +87,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2 class="title1">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
+				<h2 class="title1">La chouette agence is a web design agency that helps companies become attractive and visible on the Internet.</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -99,7 +99,7 @@
 					Web design
 				</h3>
 				<p class="text-center ">
-					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+					Whether you have a website that needs a refresh or you're starting from scratch, let us create a design you'll be proud of.
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -107,10 +107,10 @@
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
 				<h3 class="mg-md text-center">
-					&nbsp;Stratégie
+					&nbsp;Strategy
 				</h3>
 				<p class="text-center ">
-					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+					Rather than suggesting trendy designs, we will work with you to understand your business objectives in order to provide you with the best possible design.<br>
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -121,16 +121,16 @@
 					Illustrations
 				</h3>
 				<p class="text-center ">
-					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
+					Good design is nothing without good illustrations. Let our team of talented graphic designers give your pages a final touch of elegance.
 				</p>
 			</div>
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<p class="citation_main">"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprises
-					et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."
+				<p class="citation_main">"La chouette agence is a great web agency! The web designers managed to capture the essence of our business
+					and integrate it into our site. It helped us double our online sales in Lyon."
 				</p>
-				<p class="citation_auteur">Maxime Guibard, PDG de À vos fourchettes</p>
+				<p class="citation_auteur">Maxime Guibard, CEO of À vos fourchettes</p>
 
 			</div>
 		</div>
@@ -144,10 +144,10 @@
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
 				<h2 class="mg-md text-center tc-white">
-					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+					We want to help businesses in the Lyon area to grow and succeed. We work to help local businesses attract new customers.<br>
 				</h2>
 				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+                    We enjoy collaborating with creative entrepreneurs and local businesses, whether they need to create a site from scratch or give their site a facelift. Whether you need a complete visual identity or a complete redesign of your site, don't hesitate to contact us. We will work together to create beautiful and well-structured sites that will be easily found on search engines. <br><br><a class="ltc-white bold-link" href="page2.html">Contact our team</a><br>
 				</p>
 			</div>
 		</div>
@@ -160,26 +160,26 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p class="title2">Nous travaillons avec beaucoup de clients, voici nos réalisations d'agence web design.</p>
+				<p class="title2">We work with many clients, here are our web design agency achievements.</p>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
-					Refonte d'un site web pour un journal local
+					Website redesign for a local newspaper
 				</h3>
 				<p class="text-center">
-					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
+					We created a new visual identity for a newspaper in Lyon.
 				</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 				<h3 class="mg-md text-center">
-					Création d'un site web pour photographes
+					Creation of a website for photographers
 				</h3>
 				<p class="text-center">
-					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
+					We have designed the ideal platform to make room for photographers' shots.
 				</p>
 			</div>
 		</div>
@@ -187,19 +187,19 @@
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
-					Création d'un site internet pour un voyageur
+					Creation of a website for a traveler.
 				</h3>
 				<p class="text-center">
-					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
+					We have developed a website and illustrations to sublimate the videos and articles of this traveller.
 				</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 				<h3 class="mg-md text-center">
-					Conception d'un site pour une agence de mariage
+					Design of a website for a wedding agency.
 				</h3>
 				<p class="text-center">
-					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
+					We worked with this agency to create a website allowing the detailed presentation of their services.
 				</p>
 			</div>
 		</div>
@@ -212,7 +212,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center tc-white">
-				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+				Ready to bring your project back to life? <br> Contact our team!
 			</h2>
 			<div class="col-sm-12 text-center">
 				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
@@ -228,7 +228,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.<br>
+					La chouette agence - Web agency based in Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
@@ -255,7 +255,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
-						Partenaires
+						Partners
 							<ul>
 								<li><a href="voiture.com">voiture.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
@@ -264,7 +264,7 @@
 							</ul>		
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 1
+						Directories list 1
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
@@ -278,7 +278,7 @@
 						</ul>
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 2
+						Directories list 2
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
 							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
