Ajout traduction page2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<link rel="alternate" hreflang="en" href="https://magnus-fidelis.github.io/Projet-4/fr/" /> <!-- Permet à google d'identifier les URL qui doivent être servies à vos visiteurs en fonction
+	<link rel="alternate" hreflang="fr" href="https://magnus-fidelis.github.io/Projet-4/fr/" /> <!-- Permet à google d'identifier les URL qui doivent être servies à vos visiteurs en fonction
 	de leur langue et de leur situation géographique. -->
 
 	
