--- a/page2-en.html
+++ b/page2-en.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="Default">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
@@ -11,8 +11,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-	<link rel="alternate" hreflang="fr" href="https://magnus-fidelis.github.io/Projet-4/fr/" /> <!-- Permet à google d'identifier les URL qui doivent être servies à vos visiteurs en fonction
-		de leur langue et de leur situation géographique. -->
+    <link rel="alternate" hreflang="x-default" href="https://magnus-fidelis.github.io/Projet-4/en/" /> <!-- Permet à google d'identifier les URL qui doivent être servies à vos visiteurs en fonction
+        de leur langue et de leur situation géographique. -->
     
 	<script src="./js/jquery-2.1.0.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
@@ -44,7 +44,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html">Home Page</a>
 					</li>
 					<li>
 					</li>
@@ -64,11 +64,11 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<h1 class="text-center hero-bloc-text tc-white">
-					Parlons web design !
+					Let's talk web design!
 				</h1>
 				<p class="text-center mg-lg tc-white tight-width-whitespace">
-					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+					We are delighted that you are interested in working with our agency.<br>
+					Tell us about your project by completing the form below.
 				</p>
 			</div>
 		</div>
@@ -84,35 +84,35 @@
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label>
-							Nom
+							Name
 						</label>
 						<input id="name" class="form-control" required />
 					</div>
 					<div class="form-group">
 						<label>
-							Adresse email
+							Email address
 						</label>
 						<input id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
 						<label>
-							Comment nous avez-vous connu ?
+							How did you hear about us?
 						</label>
 						<input class="form-control" type="email" required id="input_504" />
 					</div>
 					<div class="form-group">
 						<label>
-							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+							Brief of your project (Add as many details as needed)<br>
 						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
-						Envoyer
+						Send to
 					</button>
 				</form>
 			</div>
 			<div class="col-sm-6">
 				<p>
-					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Open from 9am to 6pm, Monday to Friday<br>
 				</p>
 			</div>
 		</div>
@@ -131,7 +131,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.<br>
+					La chouette agence - Web agency based in Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
